--- a/Vision-Text-Detection-Sample/CameraViewController.xib
+++ b/Vision-Text-Detection-Sample/CameraViewController.xib
@@ -1,22 +1,90 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CameraViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CameraViewController" customModule="Vision_Text_Detection_Sample" customModuleProvider="target">
             <connections>
+                <outlet property="analysisButton" destination="nzO-Jb-DYM" id="4ki-0o-T4e"/>
+                <outlet property="captureSessionView" destination="Ubk-tZ-go1" id="z8F-xK-A3c"/>
+                <outlet property="reshootButton" destination="4Dg-1w-Miq" id="5S8-kX-912"/>
+                <outlet property="shootButton" destination="YCa-qG-Rdk" id="GpU-l2-ren"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ubk-tZ-go1">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="717"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Dg-1w-Miq">
+                    <rect key="frame" x="43" y="766.5" width="80" height="80"/>
+                    <color key="backgroundColor" red="1" green="0.2666666667" blue="0.050980392159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                    <state key="normal" title="撮り直し">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="didTapReshoot:" destination="-1" eventType="touchUpInside" id="OzQ-b2-jWa"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YCa-qG-Rdk">
+                    <rect key="frame" x="167" y="766.5" width="80" height="80"/>
+                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="80" id="9XU-0k-kn1"/>
+                        <constraint firstAttribute="width" constant="80" id="wYB-ev-Rnb"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                    <state key="normal" title="撮影">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="didTapShoot:" destination="-1" eventType="touchUpInside" id="cZr-2A-1sm"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nzO-Jb-DYM">
+                    <rect key="frame" x="291" y="766.5" width="80" height="80"/>
+                    <color key="backgroundColor" red="0.86801235792420395" green="0.33016821359745224" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                    <state key="normal" title="分析">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="didTapAnalysis:" destination="-1" eventType="touchUpInside" id="qDe-OT-tPx"/>
+                    </connections>
+                </button>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="nzO-Jb-DYM" firstAttribute="width" secondItem="YCa-qG-Rdk" secondAttribute="width" id="1oJ-Ki-hbp"/>
+                <constraint firstItem="nzO-Jb-DYM" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" multiplier="1.6" id="5Z4-3V-yAj"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Ubk-tZ-go1" secondAttribute="trailing" id="5x4-cn-4Ig"/>
+                <constraint firstItem="nzO-Jb-DYM" firstAttribute="centerY" secondItem="YCa-qG-Rdk" secondAttribute="centerY" id="9ci-wA-2oZ"/>
+                <constraint firstItem="Ubk-tZ-go1" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="DFT-xu-KDw"/>
+                <constraint firstItem="YCa-qG-Rdk" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="H0j-fW-TWj"/>
+                <constraint firstItem="4Dg-1w-Miq" firstAttribute="width" secondItem="YCa-qG-Rdk" secondAttribute="width" id="JUY-7n-4O3"/>
+                <constraint firstItem="4Dg-1w-Miq" firstAttribute="centerY" secondItem="YCa-qG-Rdk" secondAttribute="centerY" id="SZ4-Qm-Wzz"/>
+                <constraint firstItem="4Dg-1w-Miq" firstAttribute="height" secondItem="YCa-qG-Rdk" secondAttribute="height" id="VQr-gN-F2J"/>
+                <constraint firstItem="Ubk-tZ-go1" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="fI6-du-2Uo"/>
+                <constraint firstItem="YCa-qG-Rdk" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" multiplier="1.8" id="hvj-X9-rMl"/>
+                <constraint firstItem="4Dg-1w-Miq" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" multiplier="0.4" id="jQn-rr-ZC8"/>
+                <constraint firstItem="Ubk-tZ-go1" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.8" id="kFz-ue-UvJ"/>
+                <constraint firstItem="nzO-Jb-DYM" firstAttribute="height" secondItem="YCa-qG-Rdk" secondAttribute="height" id="lhX-Tm-6Gs"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="137.68115942028987" y="117.85714285714285"/>
         </view>
     </objects>
 </document>
